--- a/index.html
+++ b/index.html
@@ -1,27 +1,79 @@
 <html>
-<head>
-    <title>Realtime Filter  Webapp using PoseNet Neural Network</title>
+  <head>
+    <title>Face Recognition Web App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-  <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-</head>
-<body background="depositphotos_74251581-stock-illustration-mustache-background.jpg">
+  <body>
+  <div class="container">
+  
+    <center>
+<h3 class="btn btn-warning heading " > FACE RECOGNITION WEB APP 
+<br>
+<span>&#128522;</span> |
+<span>&#128532;</span> |
 
-<center>
-
-<h3 class="btn btn-info">Realtime Filter</h3>
+</h3>
 <br><br>
-<button onclick="take_snapshot()" class="btn btn-success">Take Snapshot</button>
-</center>
+<p style="font-size: 22px;">Take your selfie to generate emoji.
+<br>
+<b style="color:olive;"> Are you Happy?</b>
+<br>
+<b style="color:black;"> Are you Sad?</b>
+<br>
+</p>
+<div class="col-md-4 col-sm-12 col-xs-12">
+<label>Webcam View - </label>
+<div id="camera">   </div>
+<br>
+<button onclick="Take_Spanshot()" class="btn btn-warning" >Capture Image</button>
+</div>
+
+<div class="col-md-4 col-sm-12 col-xs-12">
+  <label>Prediction 1 - </label>
+  <p class="emotion_name" id="result_emotion_name">      </p>
+  <p class="emoji" id="update_emoji">     </p>
+
+  <label>Prediction 2 - </label>
+  <p class="emotion_name" id="result_emotion_name2">    </p>
+  <p class="emoji" id="update_emoji2">    </p>
+</div>
+
+<div class="col-md-4 col-sm-12 col-xs-12">
+  <label>Snapshot - </label>
+  <div id="result">   </div>
+  <br>
+  <button onclick="check()" class="btn btn-success" >Predict Emotion</button>
+  </div>
 
 
+
+
+
+
+
+      
+    </center>
+
+  </div>
 
 <script src="main.js"></script>
+
+  
+
+
+
+
+
+
+
 </body>
 </html>
